--- a/index.html
+++ b/index.html
@@ -39,7 +39,9 @@
         >
           <div class="header__left justify-content-start">
             <div class="header__music">
-              <img src="./assets/images/ic_music.svg" alt="" />
+              <a href="">
+                <img src="./assets/images/ic_music.svg" alt="" />
+              </a>
             </div>
           </div>
           <div class="header__center d-flex align-items-center">
@@ -96,6 +98,9 @@
       </div>
     </header>
     <!-- end header -->
+    <!-- custom cursor-->
+    <div class="cursor-magic"></div>
+    <!-- end cursor-->
     <!-- start group cta -->
     <!-- <div class="cta-group position-fixed">
       <div class="cta__list d-flex align-items-center">
