--- a/index.html
+++ b/index.html
@@ -125,10 +125,30 @@
       <section class="introduce-sec">
         <div class="container-fluid p-0">
           <div class="introduce__container text-center">
-            <h1>
-              TACO <br />
-              DESOL
-            </h1>
+            <div class="introduce__left">
+              <div class="box-img">
+                <img src="./assets/images/img_1.png" alt="" />
+              </div>
+            </div>
+            <div
+              class="introduce__title d-flex justify-content-center align-items-center"
+            >
+              <h1>
+                TACO <br />
+                DESOL
+              </h1>
+              <div class="introduce__bg">
+                <img src="./assets/images/ic_intro.svg" alt="" />
+              </div>
+            </div>
+            <div class="introduce__right">
+              <div class="box-img">
+                <img
+                  src="https://images.unsplash.com/photo-1505533321630-975218a5f66f?q=80&w=2874&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
+                  alt=""
+                />
+              </div>
+            </div>
           </div>
         </div>
       </section>
