--- a/index.html
+++ b/index.html
@@ -122,6 +122,7 @@
         </div>
       </section>
       <div class="banner"></div>
+      <!-- start introduce sec -->
       <section class="introduce-sec">
         <div class="container-fluid p-0">
           <div class="introduce__container text-center">
@@ -131,7 +132,7 @@
               </div>
             </div>
             <div
-              class="introduce__title d-flex justify-content-center align-items-center"
+              class="introduce__title text-random d-flex justify-content-center align-items-center"
             >
               <h1>
                 TACO <br />
@@ -152,6 +153,177 @@
           </div>
         </div>
       </section>
+      <!-- end introduce sec -->
+      <div class="spacing"></div>
+      <!-- start restaurant sec -->
+      <section class="restaurant-sec">
+        <div class="container-fluid p-0">
+          <div class="restaurant__container">
+            <div class="restaurant__top d-flex justify-content-center">
+              <div class="restaurant__box">
+                <div class="restaurant__title text-random">
+                  <h1>
+                    isn't just <br />
+                    a restaurant,<br />
+                    it's a story.
+                  </h1>
+                </div>
+                <div class="restaurant__desc">
+                  <p class="b1-font text-center">
+                    A story that began in 2020 on the bustling streets of Phu
+                    My, where our little taco stand became a nightly gathering
+                    place. People lined up, eager to taste our authentic Mexican
+                    flavors, made with fresh ingredients and a whole lot of
+                    passion.
+                  </p>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+      <!-- end restaurant sec -->
+
+      <!-- start event-sec -->
+      <section class="events-sec">
+        <div class="container-fluid p-0">
+          <div class="events__container">
+            <div class="events__title h1-font">EVENTS</div>
+            <div class="events__list">
+              <div class="swiper swiper-event">
+                <div class="swiper-wrapper">
+                  <div class="swiper-slide">
+                    <div class="events__item">
+                      <div class="events__img">
+                        <img
+                          src="https://images.unsplash.com/photo-1512838243191-e81e8f66f1fd?q=80&w=2940&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
+                          alt=""
+                        />
+                      </div>
+                      <div class="events__content">
+                        <div class="rank h1-font">#<span>1</span></div>
+                        <div class="detail">
+                          <h3 class="h2-font" style="--color-text: #ee2400">
+                            LADIES’ NIGHT: FREE DRINK FOR LADIES TONIGHT!
+                          </h3>
+                          <div class="desc b2-font">Wed, 18 Sep</div>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="swiper-slide">
+                    <div class="events__item">
+                      <div class="events__img">
+                        <img
+                          src="https://images.unsplash.com/photo-1582169296194-e4d644c48063?q=80&w=2800&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
+                          alt=""
+                        />
+                      </div>
+                      <div class="events__content">
+                        <div class="rank h1-font">#<span>2</span></div>
+                        <div class="detail">
+                          <h3 class="h2-font" style="--color-text: #feb503">
+                            LADIES’ NIGHT: FREE DRINK FOR LADIES TONIGHT!
+                          </h3>
+                          <div class="desc b2-font">Wed, 18 Sep</div>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="swiper-slide">
+                    <div class="events__item">
+                      <div class="events__img">
+                        <img
+                          src="https://images.unsplash.com/photo-1512838243191-e81e8f66f1fd?q=80&w=2940&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
+                          alt=""
+                        />
+                      </div>
+                      <div class="events__content">
+                        <div class="rank h1-font">#<span>3</span></div>
+                        <div class="detail">
+                          <h3 class="h2-font" style="--color-text: #108a00">
+                            Celebrate Mexican Night with Us!
+                          </h3>
+                          <div class="desc b2-font">
+                            Just 499k within a 2 hour unlimited dining
+                            experience!
+                          </div>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="swiper-slide">
+                    <div class="events__item">
+                      <div class="events__img">
+                        <img
+                          src="https://images.unsplash.com/photo-1512838243191-e81e8f66f1fd?q=80&w=2940&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
+                          alt=""
+                        />
+                      </div>
+                      <div class="events__content">
+                        <div class="rank h1-font">#<span>4</span></div>
+                        <div class="detail">
+                          <h3 class="h2-font" style="--color-text: #ee2400">
+                            LADIES’ NIGHT: FREE DRINK FOR LADIES TONIGHT!
+                          </h3>
+                          <div class="desc b2-font">Wed, 18 Sep</div>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="swiper-slide">
+                    <div class="events__item">
+                      <div class="events__img">
+                        <img
+                          src="https://images.unsplash.com/photo-1582169296194-e4d644c48063?q=80&w=2800&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
+                          alt=""
+                        />
+                      </div>
+                      <div class="events__content">
+                        <div class="rank h1-font">#<span>5</span></div>
+                        <div class="detail">
+                          <h3 class="h2-font" style="--color-text: #feb503">
+                            LADIES’ NIGHT: FREE DRINK FOR LADIES TONIGHT!
+                          </h3>
+                          <div class="desc b2-font">Wed, 18 Sep</div>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="swiper-slide">
+                    <div class="events__item">
+                      <div class="events__img">
+                        <img
+                          src="https://images.unsplash.com/photo-1512838243191-e81e8f66f1fd?q=80&w=2940&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
+                          alt=""
+                        />
+                      </div>
+                      <div class="events__content">
+                        <div class="rank h1-font">#<span>6</span></div>
+                        <div class="detail">
+                          <h3 class="h2-font" style="--color-text: #108a00">
+                            LADIES’ NIGHT: FREE DRINK FOR LADIES TONIGHT!
+                          </h3>
+                          <div class="desc b2-font">Wed, 18 Sep</div>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <div class="swiper-arrows">
+                <div class="swiper-button-prev">
+                  <img src="./assets/images/ic_arrow_prev.svg" alt="" />
+                </div>
+                <div class="swiper-button-next">
+                  <img src="./assets/images/ic_arrow_next.svg" alt="" />
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+      <!-- end event-sec -->
     </main>
 
     <!-- end header -->
