--- a/index.html
+++ b/index.html
@@ -179,6 +179,21 @@
                 </div>
               </div>
             </div>
+            <div class="restaurant__bottom">
+              <div class="restaurant__box">
+                <div class="text-random">
+                  <h1>
+                    MUSHROOM <br />
+                    PIPIL
+                  </h1>
+                </div>
+                <div class="restaurant__btn">
+                  <a href="" class="h4-font">
+                    <span>VIEW ALL</span>
+                  </a>
+                </div>
+              </div>
+            </div>
           </div>
         </div>
       </section>
@@ -325,6 +340,15 @@
       </section>
       <!-- end event-sec -->
     </main>
+    <!-- start footer -->
+    <footer class="footer">
+      <div class="container-fluid p-0">
+        <div class="footer__container">
+          <div class="footer__top"></div>
+        </div>
+      </div>
+    </footer>
+    <!-- end footer -->
 
     <!-- end header -->
     <!-- import jquery -->
