--- a/index.html
+++ b/index.html
@@ -189,9 +189,41 @@
                 </div>
                 <div class="restaurant__btn">
                   <a href="" class="h4-font">
-                    <span>VIEW ALL</span>
+                    <span class="h4-font">VIEW ALL</span>
                   </a>
                 </div>
+              </div>
+              <div class="restaurant__list">
+                <ul>
+                  <!-- list món ăn -->
+                  <li>
+                    <img src="./assets/images/cake_1.png.png" alt="" />
+                  </li>
+                  <li>
+                    <img src="./assets/images/cake_2.png.png" alt="" />
+                  </li>
+                  <li>
+                    <img src="./assets/images/cake_3.png.png" alt="" />
+                  </li>
+                  <li>
+                    <img src="./assets/images/cake_1.png.png" alt="" />
+                  </li>
+                  <li>
+                    <img src="./assets/images/cake_2.png.png" alt="" />
+                  </li>
+                  <li>
+                    <img src="./assets/images/cake_3.png.png" alt="" />
+                  </li>
+                  <!-- end list món ăn -->
+                  <!-- img arrow -->
+                  <li class="hover-me one">
+                    <img src="./assets/images/img_hover_me_1.svg" alt="" />
+                  </li>
+                  <li class="hover-me two">
+                    <img src="./assets/images/img_hover_me_2.svg" alt="" />
+                  </li>
+                  <!-- end img arrow -->
+                </ul>
               </div>
             </div>
           </div>
