--- a/delivery.html
+++ b/delivery.html
@@ -254,29 +254,6 @@
                   <span>+</span>
                 </div>
               </div>
-              <div class="minicart-popup-item">
-                <div class="minicart-popup-content">
-                  <div
-                    class="item-added-to-cart-image"
-                    style="
-                      --bg-add-to-cart: url('../images/img_bg_product_1.png');
-                    "
-                  >
-                    <img src="./assets/images/cake_2.png.png" alt="" />
-                  </div>
-                  <div class="item-added-to-cart-info">
-                    <h4 class="item-added-to-cart-name h4-font">
-                      mushroom pibil
-                    </h4>
-                    <p class="item-added-to-cart-price h4-font">175.000 Đ</p>
-                  </div>
-                </div>
-                <div class="minicart-popup-quanlity">
-                  <span>-</span>
-                  <p>1</p>
-                  <span>+</span>
-                </div>
-              </div>
             </div>
             <div class="minicart-popup-footer">
               <div class="minicart-popup-subtotal">
@@ -286,6 +263,9 @@
             </div>
           </div>
         </div>
+      </div>
+      <div class="minicart-popup-sumbit">
+        <button>go to cart</button>
       </div>
     </div>
 
