--- a/index.html
+++ b/index.html
@@ -198,6 +198,9 @@
                   <!-- list món ăn -->
                   <li>
                     <img src="./assets/images/cake_1.png.png" alt="" />
+                    <div class="hover-me one">
+                      <img src="./assets/images/img_hover_me_1.svg" alt="" />
+                    </div>
                   </li>
                   <li>
                     <img src="./assets/images/cake_2.png.png" alt="" />
@@ -205,6 +208,7 @@
                   <li>
                     <img src="./assets/images/cake_3.png.png" alt="" />
                   </li>
+
                   <li>
                     <img src="./assets/images/cake_1.png.png" alt="" />
                   </li>
@@ -216,9 +220,7 @@
                   </li>
                   <!-- end list món ăn -->
                   <!-- img arrow -->
-                  <li class="hover-me one">
-                    <img src="./assets/images/img_hover_me_1.svg" alt="" />
-                  </li>
+
                   <li class="hover-me two">
                     <img src="./assets/images/img_hover_me_2.svg" alt="" />
                   </li>
