--- a/delivery.html
+++ b/delivery.html
@@ -663,6 +663,12 @@
                     </li>
                   </ul>
                 </div>
+                <div class="footer__item --parking">
+                  <h3 class="h3-font">Parking free</h3>
+                  <div class="img">
+                    <img src="./assets/images/ic_parking.svg" alt="" />
+                  </div>
+                </div>
               </div>
             </div>
           </div>
