--- a/delivery.html
+++ b/delivery.html
@@ -481,7 +481,9 @@
         <div class="footer__container">
           <div class="footer__top">
             <div class="footer_chair">
-              <img src="./assets/images/img_ghe.png" alt="" />
+              <div class="box">
+                <img src="./assets/images/img_chair.png" alt="" />
+              </div>
             </div>
             <div class="footer__content">
               <div class="footer__list">
