--- a/delivery.html
+++ b/delivery.html
@@ -482,7 +482,7 @@
           <div class="footer__top">
             <div class="footer_chair">
               <div class="box">
-                <img src="./assets/images/img_chair.png" alt="" />
+                <img src="./assets/images/img_ghe.png" alt="" />
               </div>
             </div>
             <div class="footer__content">
@@ -672,6 +672,27 @@
                   </div>
                 </div>
               </div>
+            </div>
+          </div>
+          <div class="foooter__bottom">
+            <p class="b3-font">© 2024 Taco Del Sol</p>
+            <div class="page">
+              <ul>
+                <li>
+                  <a href="" class="b3-font">Privacy policy</a>
+                </li>
+                <li>
+                  <a href="" class="b3-font">General Terms & Conditions</a>
+                </li>
+                <li>
+                  <a href="" class="b3-font">Payment method</a>
+                </li>
+              </ul>
+            </div>
+            <div class="author">
+              <a href="https://alphacreative.vn/" class="b3-font"
+                >Digital Experience by Alpha Creative</a
+              >
             </div>
           </div>
         </div>
