--- a/delivery.html
+++ b/delivery.html
@@ -474,6 +474,7 @@
           </div>
         </div>
       </section>
+      <div class="spacing"></div>
     </main>
     <!-- start footer -->
     <footer class="footer">
