add permarlink page offer

--- a/offer.html
+++ b/offer.html
@@ -279,8 +279,9 @@
           <div class="offer__container">
             <div class="offer__title h1-font">OFFERS</div>
             <div class="offer__list">
-              <div
-                class="offer__item"
+              <a
+                href="./offer-detail.html"
+                class="offer__item d-block"
                 style="
                   --color-item: #9cdbf1;
                   --art-work: url('../images/art_1.png');
@@ -296,9 +297,10 @@
                     celebrate Taco Tuesday with us.
                   </p>
                 </div>
-              </div>
-              <div
-                class="offer__item"
+              </a>
+              <a
+                class="offer__item d-block"
+                href="./offer-detail.html"
                 style="
                   --color-item: #45fb4b;
                   --art-work: url('../images/art_2.png');
@@ -314,9 +316,10 @@
                     celebrate Taco Tuesday with us.
                   </p>
                 </div>
-              </div>
-              <div
-                class="offer__item"
+              </a>
+              <a
+                href="./offer-detail.html"
+                class="offer__item d-block"
                 style="
                   --color-item: #f6ec13;
                   --art-work: url('../images/art_3.png');
@@ -332,9 +335,10 @@
                     celebrate Taco Tuesday with us.
                   </p>
                 </div>
-              </div>
-              <div
-                class="offer__item"
+              </a>
+              <a
+                href="./offer-detail.html"
+                class="offer__item d-block"
                 style="
                   --color-item: #9cdbf1;
                   --art-work: url('../images/art_1.png');
@@ -350,7 +354,7 @@
                     celebrate Taco Tuesday with us.
                   </p>
                 </div>
-              </div>
+              </a>
             </div>
           </div>
         </div>
