--- a/offer-detail.html
+++ b/offer-detail.html
@@ -48,7 +48,7 @@
             <div class="header__menu --left">
               <ul>
                 <li>
-                  <a href="" class="h3-font">HOME</a>
+                  <a href="./index.html" class="h3-font">HOME</a>
                 </li>
                 <li>
                   <a href="" class="h3-font">ABOUT</a>
@@ -66,7 +66,7 @@
                   <a href="" class="h3-font">MENU</a>
                 </li>
                 <li>
-                  <a href="" class="h3-font">OFFERS</a>
+                  <a href="./offer.html" class="h3-font">OFFERS</a>
                 </li>
               </ul>
             </div>
