add animtion chrai

--- a/cart.html
+++ b/cart.html
@@ -447,8 +447,9 @@
           <div class="footer__top">
             <div class="footer_chair">
               <div class="box">
-                <img src="./assets/images/img_ghe.png" alt="" />
+                <img src="./assets/images/img_ghes.png" alt="" />
               </div>
+              <div class="text">LET’S FEEL FREE And Say, OLA!</div>
             </div>
             <div class="footer__content">
               <div class="footer__list">
