add animtion footer

--- a/cart.html
+++ b/cart.html
@@ -636,6 +636,9 @@
                   <div class="img">
                     <img src="./assets/images/ic_parking.svg" alt="" />
                   </div>
+                  <div class="text">
+                    <span> Touch me to info </span>
+                  </div>
                 </div>
               </div>
             </div>
