add footer all page

--- a/offer-detail.html
+++ b/offer-detail.html
@@ -323,8 +323,9 @@
           <div class="footer__top">
             <div class="footer_chair">
               <div class="box">
-                <img src="./assets/images/img_ghe.png" alt="" />
+                <img src="./assets/images/img_ghes.png" alt="" />
               </div>
+              <div class="text">LET’S FEEL FREE And Say, OLA!</div>
             </div>
             <div class="footer__content">
               <div class="footer__list">
@@ -510,6 +511,9 @@
                   <h3 class="h3-font">Parking free</h3>
                   <div class="img">
                     <img src="./assets/images/ic_parking.svg" alt="" />
+                  </div>
+                  <div class="text">
+                    <span> Touch me to info </span>
                   </div>
                 </div>
               </div>
