--- a/about.html
+++ b/about.html
@@ -434,7 +434,131 @@
           </div>
         </div>
       </div>
+      <div class="about-follow follow-us">
+        <div class="container-fluid p-0">
+          <div class="follow__container">
+            <div class="follow-title">
+              <h1>Memorable <br />moments</h1>
+            </div>
+            <div class="follow-list">
+              <div class="item">
+                <div class="box">
+                  <img
+                    src="./assets/images/fl_1.png"
+                    alt=""
+                    class="img-default"
+                  />
+                  <img
+                    src="./assets/images/fl_2.png"
+                    alt=""
+                    class="img-hover"
+                  />
+                </div>
+              </div>
+              <div class="item">
+                <div class="box">
+                  <img
+                    src="./assets/images/fl_1.png"
+                    alt=""
+                    class="img-default"
+                  />
+                  <img
+                    src="./assets/images/fl_2.png"
+                    alt=""
+                    class="img-hover"
+                  />
+                </div>
+              </div>
+              <div class="item">
+                <div class="box">
+                  <img
+                    src="./assets/images/fl_1.png"
+                    alt=""
+                    class="img-default"
+                  />
+                  <img
+                    src="./assets/images/fl_2.png"
+                    alt=""
+                    class="img-hover"
+                  />
+                </div>
+              </div>
+              <div class="item">
+                <div class="box">
+                  <img
+                    src="./assets/images/fl_1.png"
+                    alt=""
+                    class="img-default"
+                  />
+                  <img
+                    src="./assets/images/fl_2.png"
+                    alt=""
+                    class="img-hover"
+                  />
+                </div>
+              </div>
+              <div class="item">
+                <div class="box">
+                  <img
+                    src="./assets/images/fl_1.png"
+                    alt=""
+                    class="img-default"
+                  />
+                  <img
+                    src="./assets/images/fl_2.png"
+                    alt=""
+                    class="img-hover"
+                  />
+                </div>
+              </div>
+              <div class="item">
+                <div class="box">
+                  <img
+                    src="./assets/images/fl_1.png"
+                    alt=""
+                    class="img-default"
+                  />
+                  <img
+                    src="./assets/images/fl_2.png"
+                    alt=""
+                    class="img-hover"
+                  />
+                </div>
+              </div>
+              <div class="item">
+                <div class="box">
+                  <img
+                    src="./assets/images/fl_1.png"
+                    alt=""
+                    class="img-default"
+                  />
+                  <img
+                    src="./assets/images/fl_2.png"
+                    alt=""
+                    class="img-hover"
+                  />
+                </div>
+              </div>
+              <div class="item">
+                <div class="box">
+                  <img
+                    src="./assets/images/fl_1.png"
+                    alt=""
+                    class="img-default"
+                  />
+                  <img
+                    src="./assets/images/fl_2.png"
+                    alt=""
+                    class="img-hover"
+                  />
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
     </main>
+    <div class="spacing"></div>
     <!-- start footer -->
     <footer class="footer">
       <div class="container-fluid p-0">
