--- a/index.html
+++ b/index.html
@@ -361,7 +361,7 @@
                 </div>
               </div>
               <div class="swiper-arrows">
-                <div class="swiper-button-prev">
+                <div class="swiper-button-prev d-none">
                   <img src="./assets/images/ic_arrow_prev.svg" alt="" />
                 </div>
                 <div class="swiper-button-next">
@@ -373,7 +373,270 @@
         </div>
       </section>
       <!-- end event-sec -->
+      <div class="spacing"></div>
+      <!-- start offer sec -->
+      <section class="offers-sec">
+        <div class="container-fluid p-0">
+          <div class="offers__container">
+            <div class="offers__title h1-font">offers</div>
+            <div class="offers__list">
+              <div class="swiper swiper-offer">
+                <div class="swiper-wrapper">
+                  <div class="swiper-slide">
+                    <div
+                      class="offers__item"
+                      style="
+                        --art-work: url('../images/art_1.png');
+                        --color-text: #feb503;
+                      "
+                    >
+                      <div class="offers__img">
+                        <img
+                          src="https://images.unsplash.com/photo-1512838243191-e81e8f66f1fd?q=80&w=2940&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
+                          alt=""
+                        />
+                      </div>
+                      <div class="offers__content">
+                        <div class="detail">
+                          <h3 class="h2-font">BUY 3 MARGARITA, GET 1 FREE</h3>
+                          <div class="desc b2-font">
+                            Introducing an exciting NEW SPECIAL to our menu. To
+                            celebrate this epic.
+                          </div>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="swiper-slide">
+                    <div
+                      class="offers__item"
+                      style="
+                        --art-work: url('../images/art_1.png');
+                        --color-text: #45fb4b;
+                      "
+                    >
+                      <div class="offers__img">
+                        <img
+                          src="https://images.unsplash.com/photo-1512838243191-e81e8f66f1fd?q=80&w=2940&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
+                          alt=""
+                        />
+                      </div>
+                      <div class="offers__content">
+                        <div class="detail">
+                          <h3 class="h2-font">BUY 3 MARGARITA, GET 1 FREE</h3>
+                          <div class="desc b2-font">
+                            Introducing an exciting NEW SPECIAL to our menu. To
+                            celebrate this epic.
+                          </div>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="swiper-slide">
+                    <div
+                      class="offers__item"
+                      style="
+                        --art-work: url('../images/art_1.png');
+                        --color-text: #feb503;
+                      "
+                    >
+                      <div class="offers__img">
+                        <img
+                          src="https://images.unsplash.com/photo-1512838243191-e81e8f66f1fd?q=80&w=2940&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
+                          alt=""
+                        />
+                      </div>
+                      <div class="offers__content">
+                        <div class="detail">
+                          <h3 class="h2-font">BUY 3 MARGARITA, GET 1 FREE</h3>
+                          <div class="desc b2-font">
+                            Introducing an exciting NEW SPECIAL to our menu. To
+                            celebrate this epic.
+                          </div>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="swiper-slide">
+                    <div
+                      class="offers__item"
+                      style="
+                        --art-work: url('../images/art_1.png');
+                        --color-text: #45fb4b;
+                      "
+                    >
+                      <div class="offers__img">
+                        <img
+                          src="https://images.unsplash.com/photo-1512838243191-e81e8f66f1fd?q=80&w=2940&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
+                          alt=""
+                        />
+                      </div>
+                      <div class="offers__content">
+                        <div class="detail">
+                          <h3 class="h2-font">BUY 3 MARGARITA, GET 1 FREE</h3>
+                          <div class="desc b2-font">
+                            Introducing an exciting NEW SPECIAL to our menu. To
+                            celebrate this epic.
+                          </div>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <div class="swiper-arrows">
+                <div class="swiper-button-prev d-none">
+                  <img src="./assets/images/ic_arrow_prev.svg" alt="" />
+                </div>
+                <div class="swiper-button-next">
+                  <img src="./assets/images/ic_arrow_next.svg" alt="" />
+                </div>
+              </div>
+            </div>
+            <div class="restaurant__btn offers__btn">
+              <a href="javascript:void(0);" class="h4-font">
+                <span class="h4-font">VIEW ALL</span>
+              </a>
+            </div>
+          </div>
+        </div>
+      </section>
+      <!-- end offer sec -->
+      <div class="spacing"></div>
+      <!-- start follow sec -->
+
+      <div class="about-follow follow-us home">
+        <div class="container-fluid p-0">
+          <div class="follow__container">
+            <div class="follow-title">
+              <div class="box">
+                <div class="img">
+                  <img src="./assets/images/ic_fl.svg" alt="" />
+                </div>
+                <h1>FOLLOW <br />US ON</h1>
+                <a href="" class="b1-font">#tacodelsol.vn</a>
+              </div>
+            </div>
+            <div class="follow-list">
+              <div class="item">
+                <div class="box">
+                  <img
+                    src="./assets/images/fl_1.png"
+                    alt=""
+                    class="img-default"
+                  />
+                  <img
+                    src="./assets/images/fl_2.png"
+                    alt=""
+                    class="img-hover"
+                  />
+                </div>
+              </div>
+              <div class="item">
+                <div class="box">
+                  <img
+                    src="./assets/images/fl_1.png"
+                    alt=""
+                    class="img-default"
+                  />
+                  <img
+                    src="./assets/images/fl_2.png"
+                    alt=""
+                    class="img-hover"
+                  />
+                </div>
+              </div>
+              <div class="item">
+                <div class="box">
+                  <img
+                    src="./assets/images/fl_1.png"
+                    alt=""
+                    class="img-default"
+                  />
+                  <img
+                    src="./assets/images/fl_2.png"
+                    alt=""
+                    class="img-hover"
+                  />
+                </div>
+              </div>
+              <div class="item">
+                <div class="box">
+                  <img
+                    src="./assets/images/fl_1.png"
+                    alt=""
+                    class="img-default"
+                  />
+                  <img
+                    src="./assets/images/fl_2.png"
+                    alt=""
+                    class="img-hover"
+                  />
+                </div>
+              </div>
+              <div class="item">
+                <div class="box">
+                  <img
+                    src="./assets/images/fl_1.png"
+                    alt=""
+                    class="img-default"
+                  />
+                  <img
+                    src="./assets/images/fl_2.png"
+                    alt=""
+                    class="img-hover"
+                  />
+                </div>
+              </div>
+              <div class="item">
+                <div class="box">
+                  <img
+                    src="./assets/images/fl_1.png"
+                    alt=""
+                    class="img-default"
+                  />
+                  <img
+                    src="./assets/images/fl_2.png"
+                    alt=""
+                    class="img-hover"
+                  />
+                </div>
+              </div>
+              <div class="item">
+                <div class="box">
+                  <img
+                    src="./assets/images/fl_1.png"
+                    alt=""
+                    class="img-default"
+                  />
+                  <img
+                    src="./assets/images/fl_2.png"
+                    alt=""
+                    class="img-hover"
+                  />
+                </div>
+              </div>
+              <div class="item">
+                <div class="box">
+                  <img
+                    src="./assets/images/fl_1.png"
+                    alt=""
+                    class="img-default"
+                  />
+                  <img
+                    src="./assets/images/fl_2.png"
+                    alt=""
+                    class="img-hover"
+                  />
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <!-- end follow sec -->
     </main>
+    <div class="spacing"></div>
     <!-- start footer -->
     <footer class="footer">
       <div class="container-fluid p-0">
