--- a/index.html
+++ b/index.html
@@ -211,6 +211,9 @@
 
                   <li>
                     <img src="./assets/images/cake_1.png.png" alt="" />
+                    <div class="hover-me two">
+                      <img src="./assets/images/img_hover_me_2.svg" alt="" />
+                    </div>
                   </li>
                   <li>
                     <img src="./assets/images/cake_2.png.png" alt="" />
@@ -221,9 +224,9 @@
                   <!-- end list món ăn -->
                   <!-- img arrow -->
 
-                  <li class="hover-me two">
+                  <!-- <li class="hover-me two">
                     <img src="./assets/images/img_hover_me_2.svg" alt="" />
-                  </li>
+                  </li> -->
                   <!-- end img arrow -->
                 </ul>
               </div>
