--- a/index.html
+++ b/index.html
@@ -240,9 +240,79 @@
       <section class="events-sec">
         <div class="container-fluid p-0">
           <div class="events__container">
-            <div class="events__title h1-font">EVENTS</div>
+            <div class="events__title h1-font">EVENTS & PROMOTION</div>
             <div class="events__list">
-              <div class="swiper swiper-event">
+              <div class="events__item">
+                <div class="events__img">
+                  <img
+                    src="https://images.unsplash.com/photo-1512838243191-e81e8f66f1fd?q=80&w=2940&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
+                    alt=""
+                  />
+                </div>
+                <div class="events__content">
+                  <div class="rank h1-font">#<span>1</span></div>
+                  <div class="detail">
+                    <h3 class="h2-font" style="--color-text: #ee2400">
+                      LADIES’ NIGHT: FREE DRINK FOR LADIES TONIGHT!
+                    </h3>
+                    <div class="desc b2-font">Wed, 18 Sep</div>
+                  </div>
+                </div>
+              </div>
+              <div class="events__item">
+                <div class="events__img">
+                  <img
+                    src="https://images.unsplash.com/photo-1582169296194-e4d644c48063?q=80&w=2800&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
+                    alt=""
+                  />
+                </div>
+                <div class="events__content">
+                  <div class="rank h1-font">#<span>2</span></div>
+                  <div class="detail">
+                    <h3 class="h2-font" style="--color-text: #feb503">
+                      LADIES’ NIGHT: FREE DRINK FOR LADIES TONIGHT!
+                    </h3>
+                    <div class="desc b2-font">Wed, 18 Sep</div>
+                  </div>
+                </div>
+              </div>
+              <div class="events__item">
+                <div class="events__img">
+                  <img
+                    src="https://images.unsplash.com/photo-1512838243191-e81e8f66f1fd?q=80&w=2940&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
+                    alt=""
+                  />
+                </div>
+                <div class="events__content">
+                  <div class="rank h1-font">#<span>3</span></div>
+                  <div class="detail">
+                    <h3 class="h2-font" style="--color-text: #108a00">
+                      Celebrate Mexican Night with Us!
+                    </h3>
+                    <div class="desc b2-font">
+                      Just 499k within a 2 hour unlimited dining experience!
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <div class="events__item">
+                <div class="events__img">
+                  <img
+                    src="https://images.unsplash.com/photo-1582169296194-e4d644c48063?q=80&w=2800&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
+                    alt=""
+                  />
+                </div>
+                <div class="events__content">
+                  <div class="rank h1-font">#<span>5</span></div>
+                  <div class="detail">
+                    <h3 class="h2-font" style="--color-text: #feb503">
+                      LADIES’ NIGHT: FREE DRINK FOR LADIES TONIGHT!
+                    </h3>
+                    <div class="desc b2-font">Wed, 18 Sep</div>
+                  </div>
+                </div>
+              </div>
+              <!-- <div class="swiper swiper-event">
                 <div class="swiper-wrapper">
                   <div class="swiper-slide">
                     <div class="events__item">
@@ -362,15 +432,15 @@
                     </div>
                   </div>
                 </div>
-              </div>
-              <div class="swiper-arrows">
+              </div> -->
+              <!-- <div class="swiper-arrows">
                 <div class="swiper-button-prev d-none">
                   <img src="./assets/images/ic_arrow_prev.svg" alt="" />
                 </div>
                 <div class="swiper-button-next">
                   <img src="./assets/images/ic_arrow_next.svg" alt="" />
                 </div>
-              </div>
+              </div> -->
             </div>
           </div>
         </div>
@@ -520,19 +590,16 @@
                 <a href="" class="b1-font">#tacodelsol.vn</a>
               </div>
             </div>
+            <!-- có option video mp4 hoặc nhập hình -->
             <div class="follow-list">
               <div class="item">
                 <div class="box">
-                  <img
-                    src="./assets/images/fl_1.png"
-                    alt=""
-                    class="img-default"
-                  />
-                  <img
-                    src="./assets/images/fl_2.png"
-                    alt=""
-                    class="img-hover"
-                  />
+                  <video autoplay muted>
+                    <source
+                      src="http://commondatastorage.googleapis.com/gtv-videos-bucket/sample/BigBuckBunny.mp4"
+                      type="video/mp4"
+                    />
+                  </video>
                 </div>
               </div>
               <div class="item">
