--- a/index.html
+++ b/index.html
@@ -34,7 +34,12 @@
     <div
       class="intro position-fixed d-flex align-items-center justify-content-center"
     >
-      <div class="intro-inner"></div>
+      <div class="intro-inner">
+        <img src="./assets/images/intro_1.png" alt="" />
+        <img src="./assets/images/intro_2.png" alt="" />
+        <img src="./assets/images/intro_3.png" alt="" />
+        <img src="./assets/images/intro_4.png" alt="" />
+      </div>
     </div>
     <!-- start header -->
     <header class="header position-fixed top-0 start-0 end-0">
