--- a/index.html
+++ b/index.html
@@ -465,7 +465,7 @@
       <!-- end event-sec -->
       <div class="spacing"></div>
       <!-- start offer sec -->
-      <section class="offers-sec">
+      <!-- <section class="offers-sec">
         <div class="container-fluid p-0">
           <div class="offers__container">
             <div class="offers__title h1-font">offers</div>
@@ -590,7 +590,7 @@
             </div>
           </div>
         </div>
-      </section>
+      </section> -->
       <!-- end offer sec -->
       <div class="spacing"></div>
       <!-- start follow sec -->
