--- a/index.html
+++ b/index.html
@@ -35,10 +35,10 @@
       class="intro position-fixed d-flex align-items-center justify-content-center"
     >
       <div class="intro-inner">
-        <!-- <img src="./assets/images/intro_1.png" alt="" />
+        <img src="./assets/images/intro_1.png" alt="" />
         <img src="./assets/images/intro_2.png" alt="" />
         <img src="./assets/images/intro_3.png" alt="" />
-        <img src="./assets/images/intro_4.png" alt="" /> -->
+        <img src="./assets/images/intro_4.png" alt="" />
       </div>
     </div>
     <!-- start header -->
