--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
           <div class="hero-banner__container">
             <!-- video or image -->
             <!-- <img src="./assets/images/img_banner.png" alt="" /> -->
-            <video autoplay muted>
+            <video muted autoplay id="video-banner">
               <source
                 src="http://commondatastorage.googleapis.com/gtv-videos-bucket/sample/BigBuckBunny.mp4"
                 type="video/mp4"
