--- a/delivery.html
+++ b/delivery.html
@@ -277,19 +277,15 @@
             <div class="delivery-category">
               <div class="title h2-font">TACOS</div>
               <div class="delivery-list">
-                <div
-                  class="delivery-item"
-                  style="
-                    --color: #feb503;
-                    --bg-img: url('../images/img_bg_product_1.png');
-                  "
-                >
+                <div class="delivery-item" style="--color: #feb503">
+                  <div class="box-img">
+                    <img src="./assets/images/img_bg_product_1.png" alt="" />
+                  </div>
+                  <div class="img">
+                    <img src="./assets/images/taco_1.png" alt="" />
+                  </div>
+
                   <div class="box">
-                    <div class="box-img">
-                      <div class="img">
-                        <img src="./assets/images/taco_1.png" alt="" />
-                      </div>
-                    </div>
                     <div class="box-content">
                       <div class="name h4-font">mushroom pibil (2pcs)</div>
                       <div class="description">
@@ -309,19 +305,15 @@
                     </div>
                   </div>
                 </div>
-                <div
-                  class="delivery-item"
-                  style="
-                    --color: #ee2400;
-                    --bg-img: url('../images/img_bg_product_1.png');
-                  "
-                >
+                <div class="delivery-item" style="--color: #108a00">
+                  <div class="box-img">
+                    <img src="./assets/images/img_bg_product_2.png" alt="" />
+                  </div>
+                  <div class="img">
+                    <img src="./assets/images/taco_1.png" alt="" />
+                  </div>
+
                   <div class="box">
-                    <div class="box-img">
-                      <div class="img">
-                        <img src="./assets/images/taco_1.png" alt="" />
-                      </div>
-                    </div>
                     <div class="box-content">
                       <div class="name h4-font">mushroom pibil (2pcs)</div>
                       <div class="description">
@@ -341,19 +333,15 @@
                     </div>
                   </div>
                 </div>
-                <div
-                  class="delivery-item"
-                  style="
-                    --color: #108a00;
-                    --bg-img: url('../images/img_bg_product_1.png');
-                  "
-                >
+                <div class="delivery-item" style="--color: #feb503">
+                  <div class="box-img">
+                    <img src="./assets/images/img_bg_product_1.png" alt="" />
+                  </div>
+                  <div class="img">
+                    <img src="./assets/images/taco_1.png" alt="" />
+                  </div>
+
                   <div class="box">
-                    <div class="box-img">
-                      <div class="img">
-                        <img src="./assets/images/taco_1.png" alt="" />
-                      </div>
-                    </div>
                     <div class="box-content">
                       <div class="name h4-font">mushroom pibil (2pcs)</div>
                       <div class="description">
@@ -373,19 +361,15 @@
                     </div>
                   </div>
                 </div>
-                <div
-                  class="delivery-item"
-                  style="
-                    --color: #feb503;
-                    --bg-img: url('../images/img_bg_product_2.png');
-                  "
-                >
+                <div class="delivery-item" style="--color: #feb503">
+                  <div class="box-img">
+                    <img src="./assets/images/img_bg_product_1.png" alt="" />
+                  </div>
+                  <div class="img">
+                    <img src="./assets/images/taco_1.png" alt="" />
+                  </div>
+
                   <div class="box">
-                    <div class="box-img">
-                      <div class="img">
-                        <img src="./assets/images/taco_1.png" alt="" />
-                      </div>
-                    </div>
                     <div class="box-content">
                       <div class="name h4-font">mushroom pibil (2pcs)</div>
                       <div class="description">
@@ -405,51 +389,15 @@
                     </div>
                   </div>
                 </div>
-                <div
-                  class="delivery-item"
-                  style="
-                    --color: #108a00;
-                    --bg-img: url('../images/img_bg_product_2.png');
-                  "
-                >
-                  <div class="box">
-                    <div class="box-img">
-                      <div class="img">
-                        <img src="./assets/images/taco_1.png" alt="" />
-                      </div>
-                    </div>
-                    <div class="box-content">
-                      <div class="name h4-font">mushroom pibil (2pcs)</div>
-                      <div class="description">
-                        <p class="b2-font">
-                          Shredded mushrooms braised in pibil sauce served with
-                          corn tortilla (Vegan)
-                        </p>
-                      </div>
-                      <div
-                        class="d-flex align-items-center justify-content-between"
-                      >
-                        <div class="price h4-font">175.000 đ</div>
-                        <div class="add-to-cart">
-                          <img src="./assets/images/ic_add.svg" alt="" />
-                        </div>
-                      </div>
-                    </div>
+                <div class="delivery-item" style="--color: #feb503">
+                  <div class="box-img">
+                    <img src="./assets/images/img_bg_product_1.png" alt="" />
                   </div>
-                </div>
-                <div
-                  class="delivery-item"
-                  style="
-                    --color: #feb503;
-                    --bg-img: url('../images/img_bg_product_1.png');
-                  "
-                >
+                  <div class="img">
+                    <img src="./assets/images/taco_1.png" alt="" />
+                  </div>
+
                   <div class="box">
-                    <div class="box-img">
-                      <div class="img">
-                        <img src="./assets/images/taco_1.png" alt="" />
-                      </div>
-                    </div>
                     <div class="box-content">
                       <div class="name h4-font">mushroom pibil (2pcs)</div>
                       <div class="description">
