--- a/delivery.html
+++ b/delivery.html
@@ -305,6 +305,34 @@
                     </div>
                   </div>
                 </div>
+                <div class="delivery-item" style="--color: #feb503">
+                  <div class="box-img">
+                    <img src="./assets/images/img_bg_product_1.png" alt="" />
+                  </div>
+                  <div class="img">
+                    <img src="./assets/images/taco_1.png" alt="" />
+                  </div>
+
+                  <div class="box">
+                    <div class="box-content">
+                      <div class="name h4-font">mushroom pibil (2pcs)</div>
+                      <div class="description">
+                        <p class="b2-font">
+                          Shredded mushrooms braised in pibil sauce served with
+                          corn tortilla (Vegan)
+                        </p>
+                      </div>
+                      <div
+                        class="d-flex align-items-center justify-content-between"
+                      >
+                        <div class="price h4-font">175.000 đ</div>
+                        <div class="add-to-cart">
+                          <img src="./assets/images/ic_add.svg" alt="" />
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                </div>
                 <div class="delivery-item" style="--color: #108a00">
                   <div class="box-img">
                     <img src="./assets/images/img_bg_product_2.png" alt="" />
